Finished the styling Added responsive design. Have to make some changes to the logo, looks a bit too big for the design in question. Has a little bug in te facebook icon, but i dont know if its the design or i have something in the code that makes it look weird. Not a very dificult log in page to make

--- a/Modern-Login/style.css
+++ b/Modern-Login/style.css
@@ -19,12 +19,12 @@ body{
     position: relative;
 }
 
-.login-card:before{
+.login-card::before{
     content: '';
     position: absolute;
     background: rgba(255, 255, 255, 0.16);
     inset: 0;
-    transform: rotate(-5px);
+    transform: rotate(-5deg);
     z-index: -1;
 }
 
@@ -78,7 +78,7 @@ body{
 
 .login-card-form .form-item .form-item-icon{
     position: absolute;
-    top: .02rem;
+    top: .82rem;
     left: 1.4rem;
     font-size: 1.3rem;
     opacity: .4;
@@ -103,8 +103,8 @@ body{
     font-size: calc(1rem * .8);
 }
 
-.login-card input[type="text"]
-.login-card input[type="email"]
+.login-card input[type="text"],
+.login-card input[type="email"],
 .login-card input[type="password"]{
     border: none;
     outline: none;
@@ -112,7 +112,7 @@ body{
     padding: 1rem 1.5rem;
     padding-left: calc(1rem *3.5);
     border-radius: 100px;
-    width: 100px;
+    width: 100%;
     transition: background .5s;
 }
 
@@ -161,4 +161,33 @@ body{
     align-items: center;
     justify-content: center;
     gap: 1rem;
+}
+
+.login-card-social-btns a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    width: 50px;
+    height: 50px;
+    background: rgba(255, 255, 255 , 0.6);
+    border-radius: 100px;
+    transition: all .5s;
+}
+
+.login-card-social-btns a:hover{
+    background: white;
+    transform: scale(1.1);
+}
+
+@media (max-width :768px){
+    
+    body {
+        padding: 2rem 0;
+    }
+
+    .login-card{
+        width: 300px;
+        padding: 2rem;
+    }
 }
